// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`projectSpacingTokenNotificationHandler getTeamsMessage method for created notification should match snapshot when there are more than 1 events 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**2 spacing tokens** are added in _projectName_! 🏃‍♂",
  "sections": [
    {
      "text": "Make sure your stylesheets are up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "zpl://spacing?pid=projectId&sptids=spacingTokenId,anotherSpacingTokenId"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/project/projectId/styleguide/spacing?sptid=spacingTokenId&sptid=anotherSpacingTokenId"
        }
      ]
    }
  ]
}
`;

exports[`projectSpacingTokenNotificationHandler getTeamsMessage method for created notification should match snapshot when there is only 1 event 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**spacingTokenName** is added in _projectName_! 🏃‍♂",
  "sections": [
    {
      "text": "Make sure your stylesheets are up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "zpl://spacing?pid=projectId&sptids=spacingTokenId"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/project/projectId/styleguide/spacing?sptid=spacingTokenId"
        }
      ]
    }
  ]
}
`;

exports[`projectSpacingTokenNotificationHandler getTeamsMessage method for updated notification should match snapshot when there are more than 1 events 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**2 spacing tokens** are updated in _projectName_! 🏃‍♂",
  "sections": [
    {
      "text": "Make sure your stylesheets are up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "zpl://spacing?pid=projectId&sptids=spacingTokenId,anotherSpacingTokenId"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/project/projectId/styleguide/spacing?sptid=spacingTokenId&sptid=anotherSpacingTokenId"
        }
      ]
    }
  ]
}
`;

exports[`projectSpacingTokenNotificationHandler getTeamsMessage method for updated notification should match snapshot when there is only 1 event 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**spacingTokenName** is updated in _projectName_! 🏃‍♂",
  "sections": [
    {
      "text": "Make sure your stylesheets are up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "zpl://spacing?pid=projectId&sptids=spacingTokenId"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/project/projectId/styleguide/spacing?sptid=spacingTokenId"
        }
      ]
    }
  ]
}
`;
